--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="choices">
             <div class="rock">
                 <!-- <img src="https://img.icons8.com/color/150/000000/hand-rock.png" id="rock"/> -->
-                <button id="rock">👊</button>
+                <button id="rock">&#9994</button>
             </div>
             <div class="paper">
                 <!-- <img src="https://img.icons8.com/color/150/000000/hand.png" id="paper"/> -->
@@ -37,7 +37,7 @@
             </div>
             <div class="scissor">
                 <!-- <img src="https://img.icons8.com/color/150/000000/hand-scissors--v1.png" id="scissors"/> -->
-                <button id="scissor">✌️</button>
+                <button id="scissor">&#9996</button>
             </div>
         </div>
 
